chore: rename and documentation

--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -1,4 +1,4 @@
 {
-  "Shortcut key to trigger the autocomplete input.": "触发自动补全输入框的快捷键。",
-  "Trigger autocomplete input": "触发自动补全的输入框"
+  "Shortcut key to trigger the smartsearch input.": "触发智能搜索输入框的快捷键。",
+  "Trigger smartsearch input": "触发智能搜索的输入框"
 }
