--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -1,5 +1,6 @@
 {
   "Shortcut key to trigger the smartsearch input.": "触发智能搜索输入框的快捷键。",
+  "Whether to enable the search provider integration.": "是否开启搜索集成。",
   "Trigger smartsearch input": "触发智能搜索的输入框",
   "e.g.: #book, @published: 2000; holmes": "示例：#书，@出版于：2000；福尔摩斯",
   "#tag ##tag #>tag @property @property:value @property[=<>]1 @property[~-+]1w []nltidwc ;filter": "#标签 ##标签 #>标签 @属性 @属性:值 @属性[=<>]1 @属性[~-+]1w []nltidwc ;文字过滤",
