--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -1,6 +1,6 @@
 {
   "Shortcut key to trigger the smartsearch input.": "触发智能搜索输入框的快捷键。",
-  "Whether to enable matching with pinyin.": "是否开启拼音匹配。",
+  "(Chinese only) Whether to enable matching with pinyin.": "是否开启拼音匹配。",
   "Trigger smartsearch input": "触发智能搜索的输入框",
   "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch",
   "e.g.: #book, @published: 2000; holmes": "示例：#书，@出版于：2000；福尔摩斯",
