--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -3,18 +3,10 @@
   "(Chinese only) Whether to enable matching with pinyin.": "中国語のみ。ピンインによる一致を有効にするかどうか",
   "Trigger smartsearch input": "スマート検索ボックスの呼び出し",
   "Here. To find related pages, type >keyword": "ここに入力。関連するページを探すには「>キーワード」",
-  "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.ja.md",
-  "Searching Blocks with Keywords or \"#Tag Names\"": "キーワードや「#タグ名」でブロックを検索する場合",
-  "Use a comma (,) for AND searches.": "カンマ記号「,」でAND検索",
-  "#>tag name :Targets child blocks.": "#>タグ名 :子ブロックまでが対象",
-  "##tag name :Includes descendant blocks.": "##タグ名 :子孫ブロックも含める場合",
-  "#[!]tag name :Excludes specific tags.": "#[!]タグ名 :特定のタグを除外する",
-  "[]t: Represents TODO tasks.": "[]t :TODOタスク",
-  "[Key combination]  select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "[キーの同時押し]  選択: 挿入、⌘: 埋込、⌘+⇧: 子ブロック埋込、⌥: 内容の挿入、⇧: ページに移動、⇧+⌥: サイドバーに開く、⇥: 完了",
-  "[Key combination]  select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "[キーの同時押し]  選択: 挿入、Ctrl: 埋込、Ctrl+Shift: 子ブロック埋込、Alt: 内容の挿入、Shift: ページに移動、Shift+Alt: サイドバーに開く、Tab: 完了",
-  "[Key combination]  select=goto; shift=sidebar": "[キーの同時押し]  選択: ページに移動、Shift: サイドバーに開く",
-  "[Key combination]  select=goto; ⇧=sidebar": "[キーの同時押し]  選択: ページに移動、⇧: サイドバーに開く",
-  "[Key combination]  select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "[キーの同時押し]  選択: 完了、⇥: 完了、⇧: ページに移動、⇧+⌥: サイドバーに開く",
-  "[Key combination]  select=complete; tab=complete; shift=goto; shift+alt=sidebar": "[キーの同時押し]  選択: 完了、Tab: 完了、Shift: ページに移動、Shift+Alt: サイドバーに開く",
-  "Learn more": "詳細はこちら"
+    "#[!]tag, ##tag, #>tag, >tag, @[!]prop: value, @prop [=<>]1, @prop~ -1w~d, []nltidwc, %j -1w~d, full text ;filter": "ブロック検索の場合: ,=>AND検索、#>タグ =>子ブロック、##タグ =>子孫ブロック含む、[]t =>TODO",
+    "select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "選択=参照; ⌘=埋め込み; ⌘+⇧=子要素を埋め込む; ⌥=コンテンツ; ⇧=移動; ⇧+⌥=サイドバー; ⇥=完了",
+    "select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "選択=参照; ctrl=埋め込み; ctrl+shift=子要素を埋め込む; alt=コンテンツ; shift=移動; shift+alt=サイドバー; tab=完了",
+    "select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "選択=完了; ⇥=完了; ⇧=移動; ⇧+⌥=サイドバー",
+    "select=complete; tab=complete; shift=goto; shift+alt=sidebar": "選択=完了; tab=完了; shift=移動; shift+alt=サイドバー",
+    "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.md"  
 }
