--- a/src/translations/ko.json
+++ b/src/translations/ko.json
@@ -2,19 +2,11 @@
   "Shortcut key to trigger the smartsearch input.": "스마트 검색 상자를 호출하는 바로 가기 키",
   "(Chinese only) Whether to enable matching with pinyin.": "(중국어 전용) 핑인으로 일치 여부를 활성화할지 여부",
   "Trigger smartsearch input": "스마트 검색 상자 호출",
-  "Here. To find related pages, type >keyword": "여기에 입력하세요. 관련 페이지를 찾으려면 >키워드를 입력하세요",
-  "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md",
-  "Searching Blocks with Keywords or \"#Tag Names\"": "키워드 또는 \"#태그 이름\"으로 블록 검색",
-  "Use a comma (,) for AND searches.": "AND 검색에 쉼표(,) 사용",
-  "#>tag name :Targets child blocks.": "#>태그 이름 :하위 블록을 대상으로 함",
-  "##tag name :Includes descendant blocks.": "##태그 이름 :하손 블록을 포함",
-  "#[!]tag name :Excludes specific tags.": "#[!]태그 이름 :특정 태그 제외",
-  "[]t: Represents TODO tasks.": "[]t :TODO 작업을 나타냅니다",
-  "[Key combination]  select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "[키 조합]  선택=참조; ⌘=삽입; ⌘+⇧=하위 블록 삽입; ⌥=내용; ⇧=이동; ⇧+⌥=사이드바; ⇥=완료",
-  "[Key combination]  select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "[키 조합]  선택=참조; ctrl=삽입; ctrl+shift=하위 블록 삽입; alt=내용; shift=이동; shift+alt=사이드바; tab=완료",
-  "[Key combination]  select=goto; shift=sidebar": "[키 조합]  선택=이동; shift=사이드바",
-  "[Key combination]  select=goto; ⇧=sidebar": "[키 조합]  선택=이동; ⇧=사이드바",
-  "[Key combination]  select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "[키 조합]  선택=완료; ⇥=완료; ⇧=이동; ⇧+⌥=사이드바",
-  "[Key combination]  select=complete; tab=complete; shift=goto; shift+alt=sidebar": "[키 조합]  선택=완료; tab=완료; shift=이동; shift+alt=사이드바",
-  "Learn more": "더 알아보기"
+  "Here. To find related pages, type >keyword" : "여기. 관련 페이지를 찾으려면 >키워드를 입력하십시오",
+  "#[!]tag, ##tag, #>tag, >tag, @[!]prop: value, @prop [=<>]1, @prop~ -1w~d, []nltidwc, %j -1w~d, full text ;filter": "#[!]태그, ##태그, #>태그, >태그, @[!]속성: 값, @속성 [=<>]1, @속성~ -1주~일, []nltidwc, %j -1주~일, 전문 텍스트 ;필터",
+  "select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "선택=참조; ⌘=삽입; ⌘+⇧=하위 항목 삽입; ⌥=콘텐츠; ⇧=이동; ⇧+⌥=사이드바; ⇥=완료",
+  "select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "선택=참조; ctrl=삽입; ctrl+shift=하위 항목 삽입; alt=콘텐츠; shift=이동; shift+alt=사이드바; tab=완료",
+  "select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "선택=완료; ⇥=완료; ⇧=이동; ⇧+⌥=사이드바",
+  "select=complete; tab=complete; shift=goto; shift+alt=sidebar": "선택=완료; tab=완료; shift=이동; shift+alt=사이드바",
+  "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md"
 }
