--- a/src/translations/zh-Hant.json
+++ b/src/translations/zh-Hant.json
@@ -2,19 +2,11 @@
   "Shortcut key to trigger the smartsearch input.": "觸發智能搜索輸入的快捷鍵。",
   "(Chinese only) Whether to enable matching with pinyin.": "（中文）是否啟用拼音匹配。",
   "Trigger smartsearch input": "觸發智能搜索輸入",
-  "Here. To find related pages, type >keyword": "這裡。要找到相關頁面，輸入 > 關鍵詞",
-  "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/",
-  "Searching Blocks with Keywords or \"#Tag Names\"": "使用關鍵詞或“＃標籤名”搜索區塊",
-  "Use a comma (,) for AND searches.": "使用逗號（，）進行AND搜索。",
-  "#>tag name :Targets child blocks.": "#>標籤名：定位子區塊。",
-  "##tag name :Includes descendant blocks.": "##標籤名：包括子代區塊。",
-  "#[!]tag name :Excludes specific tags.": "#[!]標籤名：排除特定標籤。",
-  "[]t: Represents TODO tasks.": "[]t：代表待辦事項。",
-  "[Key combination]  select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "[鍵組合] 選擇=引用; ⌘=嵌入; ⌘+⇧=嵌入子區塊; ⌥=內容; ⇧=前往; ⇧+⌥=側邊欄; ⇥=完成",
-  "[Key combination]  select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "[鍵組合] 選擇=引用; ctrl=嵌入; ctrl+shift=嵌入子區塊; alt=內容; shift=前往; shift+alt=側邊欄; tab=完成",
-  "[Key combination]  select=goto; shift=sidebar": "[鍵組合] 選擇=前往; shift=側邊欄",
-  "[Key combination]  select=goto; ⇧=sidebar": "[鍵組合] 選擇=前往; ⇧=側邊欄",
-  "[Key combination]  select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "[鍵組合] 選擇=完成; ⇥=完成; ⇧=前往; ⇧+⌥=側邊欄",
-  "[Key combination]  select=complete; tab=complete; shift=goto; shift+alt=sidebar": "[鍵組合] 選擇=完成; tab=完成; shift=前往; shift+alt=側邊欄",
-  "Learn more": "了解更多"
+  "Here. To find related pages, type >keyword": "例如：#書，@出版於：2000；福爾摩斯",
+  "#[!]tag, ##tag, #>tag, >tag, @[!]prop: value, @prop [=<>]1, @prop~ -1w~d, []nltidwc, %j -1w~d, full text ;filter": "#[!]標籤, ##標籤, #>標籤, >標籤, @[!]屬性: 值, @屬性 [=<>]1, @屬性~ -1週~天, []nltidwc, %j -1週~天, 全文檢索 ;文字過濾",
+  "select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "選擇=引用；⌘=嵌入；⌘+⇧=嵌入子級；⌥=內容；⇧=前往；⇧+⌥=側邊欄；⇥=完成",
+  "select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "選擇=引用；ctrl=嵌入；ctrl+shift=嵌入子級；alt=內容；shift=前往；shift+alt=側邊欄；tab=完成",
+  "select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "選擇=完成；⇥=完成；⇧=前往；⇧+⌥=側邊欄",
+  "select=complete; tab=complete; shift=goto; shift+alt=sidebar": "選擇=完成；tab=完成；shift=前往；shift+alt=側邊欄",
+  "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.md"
 }
