--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -4,8 +4,8 @@
   "Trigger smartsearch input": "スマート検索ボックスの呼び出し",
   "Here. To find related pages, type >keyword": "ここに入力。関連するページを探すには「>キーワード」",
   "#[!]tag, ##tag, #>tag, >tag, @[!]prop: value, @prop [=<>]1, @prop~ -1w~d, []nltidwc, %j -1w~d, full text ;filter": "検索記号: #>タグ (子要素)、##タグ (子孫要素を含む)、[]t (TODO)、カンマ, で区切る (AND検索)",
-  "select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "選択=参照; ⌘=埋込; (⌘+⇧=子要素のみ); ⌥=内容の挿入; ⇧=移動; ⇧+⌥=サイドバーへ; ⇥=進む",
-  "select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "選択=参照; Ctrl=埋込; (Ctrl+Shift=子要素のみ); Alt=内容の挿入; Shift=移動; Shift+Alt=サイドバーへ; Tab=進む",
+  "select=ref; ⌘=embed; ⌘+⇧=embed children; ⌥=content; ⇧=goto; ⇧+⌥=sidebar; ⇥=complete": "選択=引用; ⌘=埋込; (⌘+⇧=子要素のみ); ⌥=内容の挿入; ⇧=移動; ⇧+⌥=サイドバーへ; ⇥=進む",
+  "select=ref; ctrl=embed; ctrl+shift=embed children; alt=content; shift=goto; shift+alt=sidebar; tab=complete": "選択=引用; Ctrl=埋込; (Ctrl+Shift=子要素のみ); Alt=内容の挿入; Shift=移動; Shift+Alt=サイドバーへ; Tab=進む",
   "select=complete; ⇥=complete; ⇧=goto; ⇧+⌥=sidebar": "選択,⇥=進む; ⇧=移動; ⇧+⌥=サイドバーへ",
   "select=complete; tab=complete; shift=goto; shift+alt=sidebar": "選択,Tab=進む; Shift=移動; Shift+Alt=サイドバーへ",
   "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.en.md": "https://github.com/sethyuan/logseq-plugin-smartsearch/blob/master/README.ja.md",
